[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
futures = "0.3.21"
rayon = "1.5.1"
reqwest = { version = "0.11.10", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
trust-dns-resolver = "0.21.2"
