[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
rayon = "1.5.1"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
trust-dns-resolver = "0.21.2"
url = "2.2.2"
